apps/my-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-website
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
      - name: site
        image: traefik/whoami
        ports:
        - containerPort: 80
