apps/my-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-website-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-website
