apps/my-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-website-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: guilhermebelchior.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-website-service
            port:
              number: 80
